--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div id="clock"></div>
+    <div id="info"></div>
+    <div id="container">
+        <div id="clock"></div>
+    </div>
 </body>
 </html>
